log/build_2025-04-04_12-30-03/prueba/stdout_stderr.log
running egg_info
writing ../../build/prueba/prueba.egg-info/PKG-INFO
writing dependency_links to ../../build/prueba/prueba.egg-info/dependency_links.txt
writing entry points to ../../build/prueba/prueba.egg-info/entry_points.txt
writing requirements to ../../build/prueba/prueba.egg-info/requires.txt
writing top-level names to ../../build/prueba/prueba.egg-info/top_level.txt
reading manifest file '../../build/prueba/prueba.egg-info/SOURCES.txt'
writing manifest file '../../build/prueba/prueba.egg-info/SOURCES.txt'
running build
running build_py
copying prueba/prueba.py -> /home/labserver/ros2_ws/build/prueba/build/lib/prueba
copying prueba/__init__.py -> /home/labserver/ros2_ws/build/prueba/build/lib/prueba
running install
/home/labserver/.local/lib/python3.10/site-packages/setuptools/_distutils/cmd.py:66: SetuptoolsDeprecationWarning: setup.py install is deprecated.
!!

        ********************************************************************************
        Please avoid running ``setup.py`` directly.
        Instead, use pypa/build, pypa/installer or other
        standards-based tools.

        See https://blog.ganssle.io/articles/2021/10/setup-py-deprecated.html for details.
        ********************************************************************************

!!
  self.initialize_options()
running install_lib
copying /home/labserver/ros2_ws/build/prueba/build/lib/prueba/prueba.py -> /home/labserver/ros2_ws/install/prueba/lib/python3.10/site-packages/prueba
byte-compiling /home/labserver/ros2_ws/install/prueba/lib/python3.10/site-packages/prueba/prueba.py to prueba.cpython-310.pyc
  File "/home/labserver/ros2_ws/install/prueba/lib/python3.10/site-packages/prueba/prueba.py", line 10
    		super().__init()__('minimal_publisher')
    		                ^^
SyntaxError: invalid syntax

running install_data
copying resource/prueba -> /home/labserver/ros2_ws/install/prueba/share/ament_index/resource_index/packages
copying package.xml -> /home/labserver/ros2_ws/install/prueba/share/prueba
running install_egg_info
removing '/home/labserver/ros2_ws/install/prueba/lib/python3.10/site-packages/prueba-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/prueba/prueba.egg-info to /home/labserver/ros2_ws/install/prueba/lib/python3.10/site-packages/prueba-0.0.0-py3.10.egg-info
running install_scripts
Installing talker script to /home/labserver/ros2_ws/install/prueba/lib/prueba
writing list of installed files to '/home/labserver/ros2_ws/build/prueba/install.log'
